# spider

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: README.md
.claude/commands/: code.md  plan.md  prd-update.md  prd.md  visual-qa.md
.claude/rules/: coding-style.md  file-docs.md  no-hardcode.md  tech-stack.md  testing.md
.github/: AGENT.md
.github/workflows/: claude.yml
docs/: WORKFLOW.md
docs/designs/claude-workflow-kanban/: README.md  Terminal Kanban.html  Workflow Kanban.html  app.jsx  card.jsx  shell.jsx  terminal.jsx  wf-app.jsx  wf-terminal.jsx
docs/designs/screenshots/: capture-window.sh  run-visual-qa.sh
docs/prds/: claude-workflow-kanban.md
docs/tasks/: tasks-claude-workflow-kanban-2026-04-28.json  tasks-claude-workflow-kanban-2026-05-02.json
workspace/: index.html  package.json  screenshot-kanban.mjs  tsconfig.json  vite.config.ts
workspace/src/: App.tsx  README.md  main.tsx
workspace/src-tauri/: Cargo.toml  tauri.conf.json
workspace/src-tauri/icons/: icon.icns
workspace/src-tauri/src/: README.md  commands.rs  error.rs  events.rs  lib.rs  main.rs
workspace/src-tauri/src/commands/: app_state.rs  fs.rs  generic_board.rs  mod.rs  workspace.rs
workspace/src-tauri/src/fs/: atomic.rs  mod.rs
workspace/src-tauri/src/models/: generic_board.rs  mod.rs
workspace/src-tauri/src/pty/: config.rs  mod.rs
workspace/src-tauri/src/scan/: mod.rs  parser.rs  scanner.rs
workspace/src-tauri/src/watcher/: constants.rs  mod.rs
workspace/src/i18n/: README.md
workspace/tests/: README.md  setup.ts
(+99 files in other folders)
