[package]
name = "claude-workflow-kanban"
version = "0.0.0"
description = "Claude Code Workflow Kanban — desktop GUI for visualizing .claude/ + docs/"
authors = ["Tommy <suntao0518@gmail.com>"]
edition = "2021"
rust-version = "1.78"

# 见 https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "claude_workflow_kanban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Frontmatter 解析 (markdown 头部 YAML)
gray_matter = "0.3"

# 异步运行时 (Tauri 自带 tokio, 这里显式声明确保版本一致)
tokio = { version = "1", features = ["full"] }

# PTY (跨平台伪终端)
portable-pty = "0.8"

# 文件 watcher
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"

# 错误处理 + 日志
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
anyhow = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
assert_matches = "1.5"

[features]
# 默认特性
default = ["custom-protocol"]
# 生产构建走 custom-protocol, dev 走 vite localhost
custom-protocol = ["tauri/custom-protocol"]
